[gd_scene load_steps=7 format=3 uid="uid://d158e8mjutn7v"]

[ext_resource type="Script" path="res://Scripts/port.gd" id="1_bvd6a"]
[ext_resource type="Texture2D" uid="uid://dfnrssb2fphtu" path="res://Art/PlaceholderArt/PortOff.png" id="2_4yvjd"]
[ext_resource type="Texture2D" uid="uid://bmb4bna7lh3g5" path="res://Art/Interactables/Battery.png" id="3_vniqe"]
[ext_resource type="Texture2D" uid="uid://pjmvuxj7cjlu" path="res://Art/PlaceholderArt/GlowLight.png" id="4_ujcum"]
[ext_resource type="Texture2D" uid="uid://c430luieavn0b" path="res://Art/InteractPopup.png" id="4_vl6vs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0x3lg"]
size = Vector2(16, 8)

[node name="Port" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_bvd6a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4yvjd")

[node name="BatterySprite" type="Sprite2D" parent="."]
visible = false
rotation = 1.5708
texture = ExtResource("3_vniqe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0x3lg")

[node name="Popup" type="Sprite2D" parent="."]
visible = false
light_mask = 2
z_index = 3
position = Vector2(0, -21)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_vl6vs")

[node name="PointLight2D" type="PointLight2D" parent="Popup"]
range_item_cull_mask = 2
texture = ExtResource("4_ujcum")
texture_scale = 3.0

[node name="NeedBattery" type="Label" parent="."]
visible = false
light_mask = 2
z_index = 3
offset_left = -37.0
offset_top = -21.0
offset_right = 34.0
offset_bottom = -5.0
theme_override_font_sizes/font_size = 11
text = "Need Battery"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="NeedBattery"]
position = Vector2(37, 9)
range_item_cull_mask = 2
texture = ExtResource("4_ujcum")
texture_scale = 1.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
